[package]
name = "github-stars"
version = "0.2.0"
authors = ["Simon Sawert <simon@sawert.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.5"
prettytable-rs = "^0.8"
reqwest = { version = "0.10.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
